# mercadopago-sdk

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: architecture.md  authentication.md  error-handling.md  payments-and-checkout.md  qr-instore.md
examples/: basic_usage.rs  check_payment_status.rs  discovery.rs  full_qr_flow.rs  list_payments.rs  list_store_payments.rs  qr_payment.rs  refund_payment.rs
src/: error.rs  lib.rs
src/client/: mod.rs
src/models/: common.rs  instore.rs  mod.rs  payments.rs  preferences.rs  refunds.rs
tests/: client_tests.rs  error_tests.rs  model_tests.rs
