[package]
name = "mercadopago-sdk"
version = "0.1.0"
edition = "2024"
description = "Type-safe, async Rust SDK for Mercado Pago payment APIs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/MbareteSoft/mercadopago-sdk"
keywords = ["mercadopago", "payments", "checkout", "async", "argentina"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["time"] }
thiserror = "2.0"
http = "1.0"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
qrcode = "0.14"
rand = "0.8"
anyhow = "1.0"
dotenv = "0.15"

[features]
default = []
logging = ["dep:tracing"]
